Issue #2893510 by thejimbirch: Inserting an even column within an uneven column creates uneven column

--- a/less/bootstrap-paragraphs.less
+++ b/less/bootstrap-paragraphs.less
@@ -460,7 +460,7 @@
 /* Two Uneven Columns Paragraph. */
 /* .paragraph--bp-columns-two-uneven.html.twig */
 .paragraph--type--bp-columns-two-uneven {
-  &.paragraph--style--75-25 {
+  > &.paragraph--style--75-25 {
     .paragraph--type--bp-columns__2col:nth-of-type(1) {
       .make-sm-column(9);
     }
@@ -469,7 +469,7 @@
     }
   }
 
-  &.paragraph--style--66-33 {
+  > &.paragraph--style--66-33 {
     .paragraph--type--bp-columns__2col:nth-of-type(1) {
       .make-sm-column(8);
     }
@@ -478,7 +478,7 @@
     }
   }
 
-  &.paragraph--style--25-75 {
+  > &.paragraph--style--25-75 {
     .paragraph--type--bp-columns__2col:nth-of-type(1) {
       .make-sm-column(3);
     }
@@ -487,7 +487,7 @@
     }
   }
 
-  &.paragraph--style--33-66 {
+  > &.paragraph--style--33-66 {
     .paragraph--type--bp-columns__2col:nth-of-type(1) {
       .make-sm-column(4);
     }
@@ -500,7 +500,7 @@
 /* Three Uneven Columns Paragraph. */
 /* .paragraph--bp-columns-three-uneven.html.twig */
 .paragraph--type--bp-columns-three-uneven {
-  &.paragraph--style--25-50-25 {
+  > &.paragraph--style--25-50-25 {
     .paragraph--type--bp-columns__3col:nth-of-type(1) {
       .make-sm-column(3);
     }
@@ -512,7 +512,7 @@
     }
   }
 
-  &.paragraph--style--50-25-25 {
+  > &.paragraph--style--50-25-25 {
     .paragraph--type--bp-columns__3col:nth-of-type(1) {
       .make-sm-column(6);
     }
@@ -524,7 +524,7 @@
     }
   }
 
-  &.paragraph--style--25-25-50 {
+  > &.paragraph--style--25-25-50 {
     .paragraph--type--bp-columns__3col:nth-of-type(1) {
       .make-sm-column(3);
     }
@@ -536,7 +536,7 @@
     }
   }
 
-  &.paragraph--style--16-66-16 {
+  > &.paragraph--style--16-66-16 {
     .paragraph--type--bp-columns__3col:nth-of-type(1) {
       .make-sm-column(2);
     }
@@ -548,7 +548,7 @@
     }
   }
 
-  &.paragraph--style--66-16-16 {
+  > &.paragraph--style--66-16-16 {
     .paragraph--type--bp-columns__3col:nth-of-type(1) {
       .make-sm-column(8);
     }
@@ -560,7 +560,7 @@
     }
   }
 
-  &.paragraph--style--16-16-66 {
+  > &.paragraph--style--16-16-66 {
     .paragraph--type--bp-columns__3col:nth-of-type(1) {
       .make-sm-column(2);
     }
